--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
     "sails": "~0.11.4",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "html-to-json": "~0.6.0"
+
   },
   "scripts": {
     "debug": "node debug app.js",
